2008-08-31  Richard Guenther  <rguenther@suse.de>

PR middle-end/37289
	* fold-const.c (fold_binary): Retain conversions in folding
	~A + 1 to -A.

	* gcc.dg/pr37289.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@139831 138bc75d-0d04-0410-961f-82ee72b054a4